--- a/index.html
+++ b/index.html
@@ -17,13 +17,47 @@
     <header>
         <div class="header-content">
             <h1>Let's make beautiful flowers a part of your life.</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <p class="header-paragraph-style">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
             <button class="btn-main">Shop Now</button>
         </div>
         <img src="Flower Asset/pngwing 10.png" alt="Pictuer of flowers">
     </header>
     <main>
+        <!-- Hot-deal Section -->
+        <section class="hot-deal">
+            <div class="hot-deal-content">
+                <h3 class="section-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button class="btn-main">Sign Up</button>
+            </div>
+            <img src="Flower Asset/pngwing 8.png" alt="Flower Deal" class="hot-deal-img">
+        </section>
 
+        <!-- Intagram Section -->
+        <section class="social-media">
+            <div class="instagram">
+                <h3 class="section-title">Instagram</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            </div>
+            <!-- Note: image file 'Rectangle 3.png' is missing in given content-->
+            <div class="insta-pic">
+                <img src="Flower Asset/Rectangle 4.png" alt="Instagram Flower Pictuer">
+                <img src="Flower Asset/Rectangle 5.png" alt="Instagram Flower Pictuer">
+                <img src="Flower Asset/Rectangle 6.png" alt="Instagram Flower Pictuer">
+                <img src="Flower Asset/Rectangle 4.png" alt="Instagram Flower Pictuer">
+            </div>
+            <!-- Newsletter Subscription -->
+            <div class="newsletter">
+                <div class="newsletter-content">
+                    <h3 class="section-title">Get The Latest Deals</h3>
+                    <p>$30 coupon for first shopping</p>
+                    <div class="newsletter-subscription">
+                        <input type="email" name="" id="" placeholder="Enter your email here....">
+                        <button class="btn-main">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
