--- a/index.html
+++ b/index.html
@@ -17,17 +17,34 @@
     <header>
         <div class="header-content">
             <h1>Let's make beautiful flowers a part of your life.</h1>
-            <p class="header-paragraph-style">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <p class="header-paragraph-style">It is a long established fact that a reader will be distracted by the
+                readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                more-or-less normal distribution of letters.</p>
             <button class="btn-main">Shop Now</button>
         </div>
         <img src="Flower Asset/pngwing 10.png" alt="Pictuer of flowers">
     </header>
     <main>
+        <!-- Feature Section -->
+        <section class="feature">
+            <div class="feature-content">
+                <h3 class="section-title">Our Featured Flowers</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when looking at its layout.</p>
+            </div>
+            <div class="feature-gallery">
+                <img src="Flower Asset/pngwing 5.png" alt="">
+                <img src="Flower Asset/pngwing 6.png" alt="">
+                <img src="Flower Asset/pngwing 7.png" alt="">
+            </div>
+        </section>
+
         <!-- Hot-deal Section -->
         <section class="hot-deal">
             <div class="hot-deal-content">
-                <h3 class="section-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <h3 class="section-title">Hot Deal ! Sale Up To 25% <span id="text-style">Off</span></h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
                 <button class="btn-main">Sign Up</button>
             </div>
             <img src="Flower Asset/pngwing 8.png" alt="Flower Deal" class="hot-deal-img">
@@ -37,7 +54,8 @@
         <section class="social-media">
             <div class="instagram">
                 <h3 class="section-title">Instagram</h3>
-                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                    when looking at its layout.</p>
             </div>
             <!-- Note: image file 'Rectangle 3.png' is missing in given content-->
             <div class="insta-pic">
@@ -60,7 +78,11 @@
         </section>
     </main>
     <footer>
-
+        <h3 class="section-title"><span id="text-style">Flower</span><span id="text-style"
+                class="text-style-white">Shop</span></h3>
+        <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when
+            looking at its layout.</p>
+        <h5>@2020-2023, FlowerShop.com. All rights reserved. </h5>
     </footer>
 </body>
 
