--- a/index.html
+++ b/index.html
@@ -33,10 +33,36 @@
                     when looking at its layout.</p>
             </div>
             <div class="feature-gallery">
-                <img src="Flower Asset/pngwing 5.png" alt="">
-                <img src="Flower Asset/pngwing 6.png" alt="">
-                <img src="Flower Asset/pngwing 7.png" alt="">
+                <div>
+                    <img class="feature-gallery-bgcolor1" src="Flower Asset/pngwing 5.png" alt="">
+                    <h4>Pink Flower Tree</h4>
+                </div>
+                <div>
+                    <img class="feature-gallery-bgcolor2" src="Flower Asset/pngwing 6.png" alt="">
+                    <h4>Pink Flower Tree</h4>
+                </div>
+                <div>
+                    <img class="feature-gallery-bgcolor3" src="Flower Asset/pngwing 7.png" alt="">
+                    <h4>Pink Flower Tree</h4>
+                </div>
             </div>
+        </section>
+
+        <!-- Services -->
+        <section class="service-section">
+            <div class="service-1">
+                <img src="Flower Asset/Group 57.png" alt="">
+                <h3>Same Day Delivery. Click & Collect.</h3>
+            </div>
+            <div class="service-2">
+                <img src="Flower Asset/Group 58.png" alt="">
+                <h3>Fresh Flowers. Local Growers.</h3>
+            </div>
+            <div class="service-3">
+                <img src="Flower Asset/Group 59.png" alt="">
+                <h3>24/7 Free Support.</h3>
+            </div>
+
         </section>
 
         <!-- Hot-deal Section -->
@@ -75,6 +101,44 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- Customer Review -->
+        <section>
+            <h1 class="customer-section-title">Customer <span id="text-style">Review</span></h1>
+            <div class="customer-review-container">
+                <div class="customer-review">
+                    <h2 class="section-title">Md. Mahbub-e-Khuda</h2>
+                    <div class="review-star-container">
+                        <img src="Flower Asset/star.png" alt="">
+                        <img src="Flower Asset/star.png" alt="">
+                        <img src="Flower Asset/star.png" alt="">
+                        <img src="Flower Asset/star.png" alt="">
+                        <img src="Flower Asset/star.png" alt="">
+                    </div>
+                    <h4>Verified Customer</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam eos soluta asperiores deleniti
+                        repellendus possimus laborum, iusto aspernatur. Delectus, est. Quis iusto amet sapiente,
+                        voluptas, officiis nulla tempore quia minus modi repudiandae veniam dignissimos veritatis? Neque
+                        perspiciatis at odit dolore?</p>
+                </div>
+                <div class="customer-review">
+                    <h2 class="section-title">Miaranda W.</h2>
+                    <div class="review-star-container">
+                        <img src="Flower Asset/star.png" alt="">
+                        <img src="Flower Asset/star.png" alt="">
+                        <img src="Flower Asset/star.png" alt="">
+                        <img src="Flower Asset/star.png" alt="">
+                        <img src="Flower Asset/star.png" alt="">
+                    </div>
+                    <h4>Verified Customer</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi molestias facilis quos eius quasi
+                        ratione laborum veritatis vero, aliquid eligendi illo vel quaerat distinctio dolorem magnam
+                        sequi labore laudantium architecto deserunt doloribus. Qui animi fuga consectetur dolor atque.
+                        Architecto, optio.</p>
+                </div>
+            </div>
+
         </section>
     </main>
     <footer>
